# MTensor

./: CMakeLists.txt  CMakePresets.json  LINUX_SUPPORT_REPORT.md  README.md  app.cpp  readme.md
.qwen/: settings.json
config/: CompilerFlags.cmake  GoogletestConfig.cmake  OpenMPConfig.cmake
example/LeNet-5/: CMakeLists.txt  lenet5.cpp
include/MTensor/: kernels.hpp  ops.hpp  tensor.hpp  tensorImpl.hpp
include/MTensor/utils/: tensor_iterator.hpp
nn/: module.cpp  module.hpp
nn/Functional/: Functional.cpp  Functional.hpp
nn/conv2d/: conv2d.cpp  conv2d.hpp
nn/linear/: linear.cpp  linear.hpp
nn/optimizer/: optimizer.cpp  optimizer.hpp
nn/pooling/: pooling.cpp  pooling.hpp
nn/transposedconv2d/: transposedconv2d.cpp  transposedconv2d.hpp
scalar/: scalar.cpp  scalar.hpp
scalar/function/: function.cpp  function.hpp
scalar/operation/: operation.cpp  operation.hpp
src/: CMakeLists.txt
src/data/image/: image.cpp
src/nn/layers/: flatten.cpp
src/ops/: ops.cpp
src/ops/cpu/normalization/: batch_normalization.cpp
src/ops/cpu/view/: view.cpp
src/ops/utils/: tensor_iterator.cpp
tensor/: tensor.cpp  tensor.hpp
